--- a/packages/website/public/index.html
+++ b/packages/website/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Neetly / Design System</title>
+    <title>Neetly Design</title>
     <link rel="stylesheet" href="https://fonts.neetly.dev/fieldwork.css" />
   </head>
   <body>
