--- a/packages/website/public/index.html
+++ b/packages/website/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Neetly Design</title>
-    <link rel="stylesheet" href="https://fonts.neetly.dev/fieldwork.css" />
+    <link rel="stylesheet" href="https://fonts.neetly.app/fieldwork.css" />
   </head>
   <body>
     <div id="root"></div>
