--- a/packages/website/public/index.html
+++ b/packages/website/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Neetly Design</title>
+    <link rel="icon" href="/favicon.svg" />
     <link rel="stylesheet" href="https://fonts.neetly.app/fieldwork.css" />
   </head>
   <body>
