--- a/packages/website/public/index.html
+++ b/packages/website/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>Neetly Design</title>
     <link rel="icon" href="/favicon.svg" />
-    <link rel="stylesheet" href="https://fonts.neetly.app/fieldwork.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/uoq4yhe.css" />
   </head>
   <body>
     <div id="root"></div>
