Update page title

--- a/packages/color-website/public/index.html
+++ b/packages/color-website/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Cogen</title>
+    <title>Neetly Design - Color</title>
     <link rel="icon" href="/favicon.svg" />
     <link
       rel="stylesheet"
